[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha-attractor"
version = "0.2.0"
description = "Akasha event pattern and clustering engine"
requires-python = ">=3.10"

[project.scripts]
akasha-attractor = "akasha_attractor.cli.main:main"

[tool.setuptools.packages.find]
include = ["akasha_attractor*"]
